使用工厂模式配置多序列化方式