@@ -1,6 +1,7 @@
 package com.zchzh.zrpcstarter.client.discovery;
 
 import com.alibaba.fastjson.JSON;
+import com.zchzh.zrpcstarter.config.Constants;
 import com.zchzh.zrpcstarter.model.service.Service;
 import com.zchzh.zrpcstarter.serializer.zookeeper.ZookeeperSerializer;
 import org.I0Itec.zkclient.ZkClient;
@@ -31,7 +32,7 @@ public class ZkServiceDiscover implements ServiceDiscover{
         return Optional.ofNullable(children).orElse(new ArrayList<>()).stream().map(str -> {
             String deCh = null;
             try {
-                deCh = URLDecoder.decode(str, "UTF-8");
+                deCh = URLDecoder.decode(str, Constants.UTF_8);
             } catch (UnsupportedEncodingException e) {
                 e.printStackTrace();
             }
